CTS: Close app menu before showing blocked action bubble when needed.

Currently on Mac, when the blocked action bubble is shown for an extension in
the app menu, it is shown over the app menu and it's not possible to interact
with the bubble. Fix this by closing the app menu if needed before showing the
bubble.

Tested with both Cocoa and Views browser windows.

BUG=880875

Change-Id: I3ab9b1136f01ca1cf5dd13fd51831f05072c8437
Reviewed-on: https://chromium-review.googlesource.com/1211964
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Commit-Queue: Karan Bhatia <karandeepb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590433}
Former-commit-id: c4f92dd3fbf3a95f1761fa3d2b03dce6d6f06933