chrome/browser/ui/toolbar/toolbar_actions_bar_delegate.h
@@ -58,6 +58,9 @@ class ToolbarActionsBarDelegate {
   // or if the toolbar is animating.
   virtual void ShowToolbarActionBubble(
       std::unique_ptr<ToolbarActionsBarBubbleDelegate> bubble) = 0;
+
+  // Closes the overflow menu if it's open.
+  virtual void CloseOverflowMenuIfOpen() = 0;
 };
 
 #endif  // CHROME_BROWSER_UI_TOOLBAR_TOOLBAR_ACTIONS_BAR_DELEGATE_H_
